# process_13

./: .env.prod.example  .flake8  .gitignore  .pre-commit-config.yaml  .replit  Dockerfile  FINAL_SYSTEM_STATUS.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_ROADMAP_CONSOLIDATED.md  IMPLEMENTATION_ROADMAP_V2.md  MISSING_FEATURES_ROADMAP.md  QUICK_SETUP.md  QUICK_START_GUIDE.md  README.md  RECENT_IMPROVEMENTS.md  REPLIT_SETUP_GUIDE.md  TESTING_INFRASTRUCTURE_SUMMARY.md  USER_GUIDE.md  USER_TESTING_GUIDE.md  admin_interface_preview.html  ai_engine_workflow_interface_preview.html  alembic.ini  comprehensive_test_coverage_report.json  dashboard_simulation.py  demo_department_workflows.py  demo_enhanced_workflows.py  demo_phase1_foundation.py  dependency_analysis_report.json  docker-compose.prod.yml  docker-compose.yml  integration_test_report.json  interactive_ui.html  interactive_ui_enhanced.html  logistics_process_recorder.html  main.py  missing_api_endpoints.py  models_update.py  pnpm-workspace.yaml  pyproject.toml  quick_test.py  (+22 more)
.github/: dependabot.yml
.github/workflows/: ci-cd.yml
agent/: control_server.py  main.py  uploader.py
agent/recorder/: context_analyzer.py  event_serializer.py  intent_recognizer.py  multi_monitor_capture.py
ai_engine/: __init__.py  ai_learning_engine.py  approval_handler.py  auth.py  database.py  decision_engine.py  dynamic_module_generator.py  main.py  metrics_instrumentation.py  rag_engine.py  scenario_executor.py  scenario_library.py  secure_dynamic_module_generator.py  task_detection.py  task_relationship_builder.py  tasks.py  trigger_engine.py  worker_app.py  workflow_engine.py  workflow_runners.py  workflow_serializer.py
ai_engine/adaptive_decisioning/: rl_optimizer.py
ai_engine/analytics/: __init__.py  discovery.py  gamification.py  nlu.py  recommendations.py  roi.py
ai_engine/anomaly_detection/: anomaly_detector.py
ai_engine/automation_runners/: vision_utils.py
ai_engine/collaboration/: collaboration_manager.py
ai_engine/enhanced_runners/: __init__.py  browser_runner.py  desktop_runner.py  llm_runner.py
ai_engine/models/: execution.py  task.py  user.py  workflow.py  workflow_version.py
ai_engine/monitoring/: __init__.py  telemetry.py
ai_engine/nlp/: document_processor.py
ai_engine/routers/: auth_router.py  chat_router.py  discovery_router.py  execution_router.py  llm_router.py  real_time_router.py  recording_router.py  task_router.py  websocket_router.py  workflow_router.py
ai_engine/simulation/: simulator.py
ai_engine/tests/: __init__.py  pytest.ini  test_basic_functionality.py  test_decision_engine.py  test_enhanced_runners.py  test_intent_classifier.py  test_workflow_engine.py  test_workflow_runners.py
ai_engine/utils/: __init__.py  circuit_breaker.py  env_validator.py  redis_client.py  secrets_manager.py  secure_execution.py
alembic/: env.py
alembic/versions/: 0001_initial_schema_baseline.py
config/: default.yaml
dashboard_ui/: Dockerfile  config.js  mock-api.js  package-lock.json  package.json  record_test.html  workflow-recorder.html
dashboard_ui/.next/: trace
dashboard_ui/.next/cache/: config.json
dashboard_ui/.next/server/: server-reference-manifest.json
dashboard_ui/app/: page.js
dashboard_ui/graphs/: TaskRelationshipGraph.jsx
dashboard_ui/workflow_editor/: ApprovalBox.jsx  DecisionBox.jsx  ExecutionMonitor.jsx  FlowConnector.jsx  NodePropertiesPanel.jsx  PredefinedActionsPanel.jsx  StepBox.jsx  TriggerBox.jsx  WorkflowBrowser.jsx  WorkflowEditor.jsx  workflow-editor.css
dashboard_ui_v2/: .eslintrc.cjs  .eslintrc.json  .prettierignore  .prettierrc  index.html  jest.config.js  package-test.json  package.json  simple_index.html  tailwind.config.ts  vite.config.ts  vitest.config.ts
dashboard_ui_v2/src/: App.tsx  test-setup.ts  test-utils.tsx
dashboard_ui_v2/src/components/: DiscoveryPanel.tsx
dashboard_ui_v2/src/contexts/: AuthContext.tsx  (+1 more)
demos/: demo_showcase.py
docs/: EXECUTION_ARCHITECTURE.md  RAG_INTEGRATION_GUIDE.md  THREAT_MODEL.md
infrastructure/argo-rollouts/: README.md  ai-engine-rollout.yaml  analysis-templates.yaml  blue-green-rollout.yaml  install-argo-rollouts.yaml
infrastructure/gatekeeper/: README.md  allowed-registries.yaml  block-host-namespace.yaml  install-gatekeeper.yaml  no-privileged-containers.yaml  require-resource-limits.yaml  require-security-context.yaml
infrastructure/k8s/: hpa.yaml
integrations/: __init__.py
integrations/alerting_monitoring/: notification_handler.py
integrations/communication_module/: __init__.py  call_handler.py  email_handler.py
monitoring/: README.md  canary_dashboard.py  docker-compose.canary.yml  docker-compose.monitoring.yml  prometheus.yml  synthetic_canary_workflows.py
monitoring/alerts/: workflow_alerts.yml
monitoring/kubernetes/: prometheus.yaml
nginx/: nginx.conf
redis/: redis.conf
requirements/: dev.txt  minimal.txt
scripts/: cleanup_project.sh  deploy-gcp.sh  generate_user_modules.py  init_auth.py  install_agent.sh  performance-test.py  production-setup.sh  quality-check.sh  simulate_task_graph.py  train_context_ai.py
scripts/chaos/: README.md  chaos_runner.sh  cpu_stress.sh  kill_runner_pod.sh  network_partition.sh
storage/fixed/: predefined_actions.json
templates/: index.html
tests/: test_ai_learning_engine.py  test_analysis.py  test_analysis_simple.py  test_api_routers.py  test_auth_e2e.py  test_autogenerated_units.py  test_comprehensive.py  test_comprehensive_fixed.py  test_comprehensive_units.py  test_connectivity.py  test_core_logic.py  test_coverage_reporter.py  test_data_migrations.py  test_database_models.py  test_decision_engine.py  test_dependency_fixes.py  test_documentation_api.py  test_enhanced_runners.py  test_frontend_components.py  test_integration_suite.py  test_monitoring_telemetry.py  test_performance_suite.py  test_phase2_intelligence.py  test_runner_enhanced.py  test_simple_units.py  test_workflow_engine.py  test_workflow_runners.py
tests/e2e/: test_workflow_lifecycle.py
tests/perf/: README.md  locustfile.py  performance_test.py
tests/smoke/: test_smoke.py
(+30 files in other folders)
