# Python Project Configuration
# ============================
# Configuration for Python tools: Black, isort, MyPy, pytest, and more

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-engine"
version = "1.0.0"
description = "Enterprise AI-driven RPA Platform"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "RPA Development Team", email = "dev@rpa-platform.com"}
]
keywords = ["rpa", "automation", "ai", "workflow", "enterprise"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "sqlmodel>=0.0.8",
    "alembic>=1.8.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "bandit>=1.7.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "coverage>=7.0.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/company/ai-engine"
Documentation = "https://ai-engine.readthedocs.io"
Repository = "https://github.com/company/ai-engine"
"Bug Tracker" = "https://github.com/company/ai-engine/issues"

# Black configuration
[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
    # directories
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | env
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | node_modules
  | dashboard_ui_v2/node_modules
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    "*/migrations/*",
    "*/node_modules/*",
    "*/dashboard_ui_v2/node_modules/*",
    ".venv/*",
    "venv/*",
    "env/*"
]
known_first_party = ["ai_engine", "tests"]
known_third_party = [
    "fastapi",
    "uvicorn", 
    "sqlmodel",
    "pydantic",
    "pytest",
    "alembic",
    "redis",
    "celery",
    "openai",
    "langchain"
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# MyPy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for stricter typing
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# Per-module options
[[tool.mypy.overrides]]
module = [
    "tests.*",
    "migrations.*",
    "demo_*",
    "simple_demo"
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "pyautogui.*",
    "pynput.*",
    "opencv.*",
    "pytesseract.*",
    "easyocr.*",
    "schedule.*",
    "croniter.*",
    "twilio.*",
    "slack_sdk.*",
    "onnxruntime.*"
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=ai_engine",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=80"
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
    "performance: marks tests as performance tests",
    "security: marks tests as security tests"
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["ai_engine"]
omit = [
    "*/tests/*",
    "*/migrations/*", 
    "*/node_modules/*",
    "*/dashboard_ui_v2/node_modules/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    ".venv/*",
    "demo_*.py",
    "simple_demo.py"
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

# Bandit security linting configuration
[tool.bandit]
exclude_dirs = [
    "tests",
    "migrations", 
    "node_modules",
    "dashboard_ui_v2/node_modules",
    ".venv",
    "venv",
    "env"
]
skips = [
    "B101",  # assert_used - OK in tests
    "B601",  # paramiko_calls - we don't use paramiko
    "B603",  # subprocess_without_shell_equals_true - we control subprocess calls
]

# Pylint configuration (if used)
[tool.pylint.messages_control]
disable = [
    "C0103",  # invalid-name
    "C0111",  # missing-docstring  
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
]

[tool.pylint.format]
max-line-length = 100

# Additional tool configurations
[tool.vulture]
# Dead code detection
min_confidence = 80
paths = ["ai_engine"]
exclude = ["migrations/", "tests/", "node_modules/", "dashboard_ui_v2/node_modules/"]

[tool.safety]
# Security vulnerability scanning
full_report = true
ignore = [
    # Add vulnerability IDs to ignore if they're false positives
]